split program and test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,7 @@ project(tes)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(tes main.cpp)
+add_executable(test_parser test_parser.cpp)
+
+enable_testing()
+add_test(test_parser COMMAND test_parser)
