--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(tes main.cpp)
 add_executable(test_parser test_parser.cpp)
+add_executable(readCOM read.cpp)
 
 enable_testing()
 add_test(test_parser COMMAND test_parser)
